src/client/components/app-core/animations.css
:root {
  --animation-shift-transition: transform .3s cubic-bezier(.47, 0, .29, .98);
  --animation-shift-transform: translateX(var(--grid-margin));
  --ease-out: cubic-bezier(.3, .51, .09, 1);
  --animation-duration: .8s;
  --animation-stagger-offset: .1s;
  --animation-delay: 0s;
}

@keyframes blink {
  49% {
    opacity: 0;
  }

  50% {
    opacity: 1;
  }
}

@keyframes show {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes color-change-in {
  0% {
    color: var(--brand-yellow);
  }

  100% {
    color: var(--html-blue);
  }
}

@keyframes color-change-out {
  0% {
    color: var(--html-blue);
  }

  100% {
    color: var(--brand-yellow);
  }
}

/*
  =================== scale background
*/
.is-animated .scale-up-background {
  transform-origin: 0% 50%;
  transform: scaleX(0);
  animation: scale-up-background var(--animation-duration) var(--animation-delay) var(--ease-out) forwards;
}

@keyframes scale-up-background {
  100% {
    transform: scaleX(1);
  }
}

/*
  =================== uncover
*/
.is-animated .animation__uncover {
  position: relative;
  animation-delay: var(--animation-delay);
}

.is-animated .animation__uncover::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--bg-pastel);
  transform: scaleX(1);
  transform-origin: 100% 50%;
  animation: animation__uncover var(--animation-duration) var(--ease-out) forwards;
  animation-delay: inherit;
}

@keyframes animation__uncover {
  100% {
    transform: scaleX(0);
  }
}

/*
  =================== reveal
*/
.is-animated .animation__reveal {
  overflow: hidden;
  transform: translateX(-100%);
  animation: animation__reveal var(--animation-duration) var(--animation-delay) forwards;
}

.animation__reveal-content {
  width: 100%;
}

.is-animated .animation__reveal-content {
  transform: translateX(100%);
  animation: animation__reveal var(--animation-duration) forwards;
  animation-delay: inherit;
}

@keyframes animation__reveal {
  100% {
    transform: translateX(0);
  }
}

/*
  =================== slide in
*/
.is-animated .animation__slide-in {
  opacity: 0;
  transform: translateX(-100px);
  animation:
    animation__slide-in var(--animation-duration) var(--animation-delay) forwards,
    animation__fade-in var(--animation-duration) var(--animation-delay) forwards;
}

@keyframes animation__slide-in {
  100% {
    transform: translateX(0);
  }
}

/*
  =================== fade in
*/
.is-animated .animation__fade-in {
  opacity: 0;
  animation: animation__fade-in var(--animation-duration) var(--animation-delay) forwards;
}

@keyframes animation__fade-in {
  100% {
    opacity: 1;
  }
}

/*
  =================== staggered delays
*/
.is-animated .animation-stagger-1 {
  animation-delay: calc(var(--animation-delay) + var(--animation-stagger-offset));
}

.is-animated .animation-stagger-2 {
  animation-delay: calc(var(--animation-delay) + var(--animation-stagger-offset) * 2);
}

.is-animated .animation-stagger-3 {
  animation-delay: calc(var(--animation-delay) + var(--animation-stagger-offset) * 3);
}

.is-animated .animation-stagger-4 {
  animation-delay: calc(var(--animation-delay) + var(--animation-stagger-offset) * 4);
}

/*
  If the user has expressed their preference for
  reduced motion, set duration and delay to 0.
*/
@media (prefers-reduced-motion: reduce) {
  :root {
    --animation-duration: 0s !important;
    --animation-stagger-offset: 0 !important;
    --animation-delay: 0s !important;
  }
}

